[LayoutNG] Fix NGLayoutInputNode::IsInline/IsBlock

Currently, NGLayoutInputNode::IsInline() uses a bit field in
LayoutObject. This can mis-behave when NGBlockNode and NGInlineNode
share a LayoutNGBlockFLow.

This patch adds a type field back to NGLayoutInputNode.

CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_layout_ng

Bug: 739087
Change-Id: I137ee5a5233d96fbb3297f1054f2cab7e4c06d33
Reviewed-on: https://chromium-review.googlesource.com/566984
Reviewed-by: Ian Kilpatrick <ikilpatrick@chromium.org>
Commit-Queue: Koji Ishii <kojii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#485863}
Former-commit-id: 417883d42a4de932d08ce17e00822bab34ab72f0